--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,6 @@ platform = espressif32
 board = adafruit_feather_esp32s3_nopsram
 framework = arduino
 monitor_speed = 115200
+build_flags = -DARDUINO_USB_MODE=1
 lib_deps = 
 	256dpi/MQTT@^2.5.0
